<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <ImageView
	    android:id="@+id/roll_title_iv"
	    android:layout_width="48dp"
	    android:layout_height="32dp"
	    android:layout_gravity="center_vertical"
	    android:src="@drawable/aladin_logo"
	    android:scaleType="fitCenter"
	    android:background="#00202020"
	    android:contentDescription="@string/app_name"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
        <com.aladin.devnetctrl.RollTextView
            android:id="@+id/roll_title_tv"
            android:layout_width="fill_parent"
		    android:layout_height="28dp"
		    android:layout_gravity="center_vertical"
		    android:layout_weight="1"
		    android:background="#00202020"
		    android:textColor="#FFFFFFFF"
		    android:textSize="20sp"
		    android:text="@string/user_not_logon" />
        
        <com.aladin.devnetctrl.RollTextView
		    android:id="@+id/roll_subtitle_tv"
		    android:layout_width="fill_parent"
		    android:layout_height="20dp"
		    android:layout_gravity="center_vertical"
		    android:layout_weight="1"
		    android:background="#00202020"
		    android:textColor="#FFFFFFFF"
		    android:textSize="12sp"
		    android:text="@string/dev_unselect" />
	</LinearLayout>

</LinearLayout>
