<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <ImageView
        android:id="@+id/bg_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/dev_dialog_bg" />
    
     <TextView
         android:id="@+id/title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:text="@string/app_name"
         android:textColor="#FFFFFFFF"
         android:textSize="22sp" />
    
    <ImageView
        android:id="@+id/line_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/dev_dialog_line" />

    <TextView
        android:id="@+id/content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_name"
        android:textColor="#FFFFFFFF"
        android:textSize="15sp" />
    
    <Button
        android:id="@+id/cancel_bn"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_alignBottom="@id/bg_iv"
        android:layout_alignLeft="@id/bg_iv"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="40dp"
        android:background="@layout/round_bn"
        android:text="@string/cancel"
        android:textColor="#FFFFFFFF" />
    
    <Button
        android:id="@+id/ok_bn"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_alignBottom="@id/bg_iv"
        android:layout_alignRight="@id/bg_iv"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="40dp"
        android:background="@layout/round_bn"
        android:text="@string/ok"
        android:textColor="#FFFFFFFF" />

</RelativeLayout>
